# filesystem_manager

./: .travis.yml  CMakeLists.txt  README.md  build.sh
include/filesystem_manager/: filesystem.h  sha_generator.h
src/: filesystem.cpp  main.cpp  sha_generator.cpp
